suggested defaults for launching the .jar files