@@ -24,6 +24,7 @@ start)
   set -u
   /usr/sbin/daemonize -a -c $AS_HOME -e $ERRFILE -o $OUTFILE -p $PIDFILE -l $PIDFILE \
     $JAVA_HOME/bin/java \
+      -XX:MaxPermSize=256m -Xmx256m -Dfile.encoding=UTF-8 \
       -Daspace.config=$AS_HOME/config/config.rb \
       -cp $AS_HOME/lib/mysql-connector-java-5.1.21.jar:$AS_HOME/lib/archivesspace.jar \
       org.archivesspace.Main
